<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/setup_content"
    app:layout_constraintBottom_toTopOf="@+id/setup_appsettingsbutton"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.activities.SetupActivity">

    <!-- Main Content -->

        <!-- Permission Required Section -->
    <LinearLayout
        android:id="@+id/setup_layout_permissionrequired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024">

        <!-- Horizontal layout with icon and header -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setup_securityicon"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/setup_permrequired" />

            <TextView
                android:id="@+id/PermissionHeaderSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_permissionrequire"
                android:textColor="?attr/colorPrimary"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/setup_permissionrequire_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/setup_permission"
            android:textSize="15sp" />
    </LinearLayout>
        <!-- Permissions List -->
        <LinearLayout
            android:id="@+id/setup_layout_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_layout_permissionrequired">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/setup_perm_icon"
                    android:layout_width="32sp"
                    android:layout_height="32sp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/setup_permissions" />

                <TextView
                    android:id="@+id/setup_permissions_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_permission_text"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Audio Permission Row -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/setup_audio_perm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="getReadAudioPermission">

                <ImageView
                    android:id="@+id/setup_icon_p2i2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/music_note" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/setup_permissionResult"
                    app:layout_constraintStart_toEndOf="@+id/setup_icon_p2i2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/setup_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/setup_audio"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/setup_audio_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/setup_audio_description"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/setup_permissionResult"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/setup_perm_not_given"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <!-- Scan Section -->
    <LinearLayout
        android:id="@+id/setup_scan_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_layout_permissions"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/setup_seekbar_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_scan"
                android:textColor="?attr/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/setup_scan_desc"
            android:gravity="center"
            android:text="@string/setup_scan_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/setup_seekbarcurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintBottom_toBottomOf="@+id/setup_seekbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/setup_seekbar" />

            <com.google.android.material.slider.Slider
                android:id="@+id/setup_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:valueFrom="0"
                android:valueTo="15"
                app:labelBehavior="gone"
                android:thumbTint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/setup_seekbarmax"
                app:layout_constraintStart_toEndOf="@+id/setup_seekbarcurrent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/setup_seekbarmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                app:layout_constraintBottom_toBottomOf="@+id/setup_seekbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/setup_seekbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <Button
        android:id="@+id/setup_appsettingsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:onClick="openAppSettings"
        android:text="@string/setup_appsettings"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setup_grant_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setup_grant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/setup_grant_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>