<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<com.google.android.material.appbar.AppBarLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">

<com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/topAppBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    app:title="@string/settings_appearance"
    app:navigationIcon="@drawable/arrow_back" />

</com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_appearance_general"/>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:id="@+id/layout_coverroundgeneral"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/settings_appearance_round_text"
                            android:textSize="14sp"/>
                        <LinearLayout
                            android:layout_marginTop="4dp"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/appearance_np_cornerradius_now"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="12sp"
                                android:text="0"/>
                            <SeekBar
                                android:id="@+id/appearance_np_cornerradius_seekbar"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:max="100"
                                android:progress="0"
                                android:layout_height="wrap_content"></SeekBar>
                            <TextView
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:textSize="12sp"
                                android:layout_height="wrap_content"
                                android:text="100"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>




            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>