<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nowPlayingFragment"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.NowPlayingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nowplaying_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nowplaying_playingfrom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nowplaying_playfrom"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nowplaying_playingfrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/library"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/nowplaying_trackcover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cover_round"

            app:layout_constraintBottom_toTopOf="@id/layout_nowplaying_songInfo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <LinearLayout
            android:id="@+id/layout_nowplaying_songInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layout_nowplaying_seekbar">

            <TextView
                android:id="@+id/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nowplaying_emptyqueue"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="4dp"
                android:text="@string/nowplaying_unknown"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

            <TextView
                android:id="@+id/songAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="2dp"
                android:text="@string/nowplaying_unknown"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_nowplaying_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/layout_nowplaying_songcontrols"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/nowplaying_playtime_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-:--"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.slider.Slider
                app:labelBehavior="gone"
                android:id="@+id/nowplaying_trackSeekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/nowplaying_playtime_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-:--"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                android:textColor="?attr/colorOnSurface" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_nowplaying_songcontrols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/nowplaying_trackLyrics"
            tools:layout_editor_absoluteX="0dp">

            <ImageButton

                android:id="@+id/nowplaying_controls_previous"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/nowplaying_previous" />

            <ImageButton
                android:id="@+id/nowplaying_controls_play"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/nowplaying_play" />

            <ImageButton
                android:id="@+id/nowplaying_controls_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/nowplaying_next" />

        </LinearLayout>

        <TextView
            android:id="@+id/nowplaying_trackLyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="Lyrics"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>